varios varios cambios

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <p>ABCDEFGHJKMNPQRSTUVWXYZ</p>
                         <p>abcdefghjkmnpqrstuvwxyz</p>
                         <p>23456456789</p>
-                        <p>+ - . * , / ; = _ " ,</p>
+                        <p>+ - . * , / ; = _ ( )</p>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
         <div class="row">
             <form id="formulario" class="col s12 m6">
                 <div class="input-field s12 m6">
-                    <input id="largo" name="largo" type="number" max="20" class="validate" required>
+                    <input id="largo" name="largo" type="number" class="validate" required>
                     <label for="largo">Largo de la contraseña</label>
                 </div>
                 <div class="row" id="resultado">
