--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12 m6 offset-m2 l6 offset-l3">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
                         <span class="card-title">Genera contraseña</span>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="row">
-            <form id="formulario" class="col s12 m6">
+            <form id="formulario" class="col s12 m6 offset-m2 l6 offset-l3">
                 <div class="input-field s12 m6">
                     <input id="largo" name="largo" type="number" class="validate" required>
                     <label for="largo">Largo de la contraseña</label>
